<resources>
    <string name="app_name">Tarri Poha</string>

    <string name="please_wait">Please wait…</string>
    <string name="sample_title">Sample Title</string>
    <string name="word">Word</string>
    <string name="a">a</string>
    <string name="words">Words</string>
    <string name="meaning">Meaning</string>
    <string name="eng_meaning">Eng Meaning / Phrase</string>
    <string name="other_description">Other Description</string>
    <string name="sentence">Sentence</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="more">More</string>
    <string name="report">Report</string>
    <string name="copy">Copy</string>
    <string name="tell_your_friend">Tell Your Friends</string>
    <string name="share_word_card">Share Word Card</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="empty_field">Empty Field</string>
    <string name="write_quote">Write a quote for %1$s…</string>
    <string name="added_by_user">Added by %1$s</string>
    <string name="user">User</string>
    <string name="comment">Comment</string>
    <string name="yesterday">Yesterday</string>
    <string name="mobile_number">Mobile number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="almost_done">Almost Done</string>
    <string name="update_available">Update Available</string>

    <string name="click_here">Click here</string>
    <string name="login_register">Login/Register</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="version">Version %1$s</string>
    <string name="logout">Logout</string>
    <string name="pending_approvals">Pending Approvals</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="liked">Liked</string>
    <string name="liked_words">Liked Words</string>
    <string name="like">%1$s Like</string>
    <string name="likes">%1$s Likes</string>
    <string name="request_new_word">Request New Word</string>
    <string name="request">Request</string>
    <string name="requested">Requested</string>
    <string name="removed">Removed</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="requested_words">Requested Words</string>
    <string name="marathi">Marathi</string>
    <string name="hindi">Hindi</string>
    <string name="bhojpuri">Bhojpuri</string>
    <string name="english">English</string>
    <string name="select_language">Select Language *</string>
    <string name="word_of_the_week">Word of the Week</string>
    <string name="top_words">Top Words</string>
    <string name="faq">FAQ</string>
    <string name="trending">Trending</string>
    <string name="black">Black</string>
    <string name="share">Share</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="notification_word_title">Do you know %1$s?</string>
    <string name="notification_word_title_2">Today\'s word, %1$s</string>
    <string name="notification_word_title_3">You have a new word suggestion, %1$s</string>
    <string name="notification_word_desc">Tap here for more information</string>


    <string name="sample_time">12:35 PM</string>
    <string name="sample_likes">2 Likes</string>
    <string name="sample_word">होळ</string>
    <string name="sample_faq_title">How to request a new word?</string>
    <string name="sample_faq_desc">Search your word in the search screen. If you did not find it there will be an option to request new word</string>

    <string name="msg_new_word_plank">Request new word %1$s</string>
    <string name="msg_number_not_valid">Enter valid number</string>
    <string name="msg_email_not_valid">Enter valid email</string>
    <string name="msg_user_blocked">User account is disabled</string>
    <string name="msg_user_created">User account is ready, %1$s!</string>
    <string name="msg_confirm_delete">Are you sure you want to delete?</string>
    <string name="msg_force_update">Your app version is outdated. Please update the app to latest version</string>
    <string name="msg_update_available">New version is available. Do you want to update the app to latest version?</string>
    <string name="msg_confirm_logout">Are you sure you want to logout?</string>
    <string name="msg_select_language">Please select language to continue</string>
    <string name="msg_found_english_letters">Found english letters in %1$s</string>
    <string name="msg_field_too_short">Field is too short</string>
    <string name="msg_word_not_approved">Word is not approved</string>
    <string name="msg_tell_your_friend">Download Tarri Poha mobile app. Here you will find thousands of crazy indian words. Get it at https://play.google.com/store/apps/details?id=com.tarripoha.android"</string>

    <string name="error_no_result">No result found</string>
    <string name="error_no_quotes">No quotes found</string>
    <string name="error_no_words_found">You do not have any %1$s words</string>
    <string name="error_no_internet">Unable to connect. Please check your internet connection</string>
    <string name="error_unable_to_fetch">Unable to fetch data</string>
    <string name="error_unable_to_process">Unable to process data</string>
    <string name="error_timeout">Connection time out. Please try again later</string>
    <string name="error_unknown">Something went wrong. Please try again later</string>
    <string name="error_incorrect_otp">Incorrect OTP</string>
    <string name="error_otp_verification_failed">OTP verification failed</string>
    <string name="error_login">Please login to continue</string>
    <string name="error_language_not_supported">Language not supported for speak</string>
    <string name="error_update_process_failed">Update process failed. Please try again</string>

    <string name="succ_data_added">Data added successfully</string>

</resources>
