<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:paddingTop="@dimen/margin_extra_large"
        android:paddingEnd="@dimen/margin_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_tv"
            style="@style/AppTheme.TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_extra_large"
            tools:text="@string/word" />

        <TextView
            android:id="@+id/meaning_tv"
            style="@style/AppTheme.TextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            tools:text="@string/meaning" />

    </LinearLayout>

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_small"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:text="@string/approved"
        tools:visibility="visible" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:background="@color/colorGrey300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
